updated routing and translations for terms and conditions

--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -86,6 +86,7 @@
   "systemMode": "Systeem thema",
   "takePicture": "Foto nemen",
   "termsAndConditions": "Voorwaarden",
+  "termsAndConditionsText": "Deze app, ontwikkeld door Baseflow, wordt aangeboden 'as is' en Solar Team Twente (het Bedrijf) wijst alle garanties af. Door deze app te gebruiken, gaat u akkoord met deze algemene voorwaarden. De app mag niet worden gebruikt voor illegale doeleinden. Het Bedrijf kan de app op elk moment wijzigen of stopzetten. Voortgezet gebruik betekent acceptatie van wijzigingen. Bekijk de voorwaarden regelmatig. Het Bedrijf is niet aansprakelijk voor enige directe, indirecte, incidentele of gevolgschade die voortvloeit uit uw gebruik van de app.",
   "tryAgainButtonText": "Probeer opnieuw",
   "unknown": "Onbekend",
   "unknownError": "Onbekende fout. Probeer het later opnieuw."
