--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -86,6 +86,7 @@
   "systemMode": "System theme",
   "takePicture": "Take picture",
   "termsAndConditions": "Terms and conditions",
+  "termsAndConditionsText": "This app, created by Baseflow, is provided 'as is' and Solar Team Twente (the Company) disclaims all warranties. By using this app, you agree to these terms and conditions. The app must not be used for illegal purposes. The Company may modify or discontinue the app at any time. Continued use signifies acceptance of changes. Review terms regularly. The Company is not liable for any direct, indirect, incidental, or consequential damages arising from your use of the app.",
   "tryAgainButtonText": "Try again",
   "unknown": "Unknown",
   "unknownError": "An unknown error occurred. Please try again later."
