Basic setup for solarteam layout

--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -31,6 +31,7 @@
   "counterPageTitle": "Counter",
   "currentPassword": "Huidige wachtwoord",
   "darkMode": "Donker thema",
+  "dashboardPageTitle": "Dashboard",
   "dateOfBirth": "Geboortedatum",
   "deleteAccount": "Account verwijderen",
   "deleteAccountConfirmPassword": "Wachtwoord bevestigen",
@@ -51,6 +52,7 @@
   "homeAddress": "Thuisadres",
   "language": "Taal",
   "lightMode": "Licht thema",
+  "livePageTitle": "Live",
   "more": "Meer",
   "myAccount": "Mijn account",
   "name": "Naam",
