--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -31,6 +31,7 @@
   "counterPageTitle": "Counter",
   "currentPassword": "Current password",
   "darkMode": "Dark theme",
+  "dashboardPageTitle": "Dashboard",
   "dateOfBirth": "Date of birth",
   "deleteAccount": "Delete account",
   "deleteAccountConfirmPassword": "Confirm your password",
@@ -51,6 +52,7 @@
   "homeAddress": "Home address",
   "language": "Language",
   "lightMode": "Light theme",
+  "livePageTitle": "Live",
   "more": "More",
   "myAccount": "My account",
   "name": "Name",
