added announcements for features

--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -85,6 +85,7 @@
   "settings": "Settings",
   "signIn": "Sign In",
   "signOut": "Sign Out",
+  "soonAvailableMessage": "This feature will be available soon.",
   "systemMode": "System theme",
   "takePicture": "Take picture",
   "termsAndConditions": "Terms and conditions",
