--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -85,6 +85,7 @@
   "settings": "Instellingen",
   "signIn": "Inloggen",
   "signOut": "Uitloggen",
+  "soonAvailableMessage": "Deze pagina is binnenkort beschikbaar.",
   "systemMode": "Systeem thema",
   "takePicture": "Foto nemen",
   "termsAndConditions": "Voorwaarden",
