--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -41,6 +41,7 @@
   "deleteAccountSuccessMessage": "Your account data will be removed in 30 days.",
   "deleteAccountText": "Confirm your account password and press the delete account button below to delete your account.",
   "deleteAccountTitle": "Delete your account?",
+  "distanceCovered": "Distance covered",
   "email": "Email",
   "emailInvalid": "Email is invalid",
   "emailRequired": "Email is required",
@@ -51,6 +52,9 @@
   "generalCameraError": "Whoops, something went wrong using the camera or taking the picture.",
   "homeAddress": "Home address",
   "language": "Language",
+  "leaderboardEmptyMessage": "Er is momenteel geen tussenstand beschikbaar.",
+  "leaderboardErrorMessage": "Er is een fout opgetreden bij het ophalen van de tussenstand.",
+  "leaderboardTitle": "Leaderboard",
   "lightMode": "Light theme",
   "livePageTitle": "Live",
   "more": "More",
