--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -41,6 +41,7 @@
   "deleteAccountSuccessMessage": "Je account data wordt over 30 dagen verwijderd.",
   "deleteAccountText": "Bevestig je account wachtwoord en druk op de account verwijderen knop om je account te verwijderen.",
   "deleteAccountTitle": "Je account verwijderen?",
+  "distanceCovered": "Afstand afgelegd",
   "email": "Email",
   "emailInvalid": "Email is ongeldig",
   "emailRequired": "Email is verplicht",
@@ -51,6 +52,9 @@
   "generalCameraError": "Oeps, er is iets misgegaan bij het gebruik van de camera of het maken van de foto.",
   "homeAddress": "Thuisadres",
   "language": "Taal",
+  "leaderboardEmptyMessage": "Er is momenteel geen tussenstand beschikbaar.",
+  "leaderboardErrorMessage": "Er is een fout opgetreden bij het ophalen van de tussenstand.",
+  "leaderboardTitle": "Tussenstand",
   "lightMode": "Licht thema",
   "livePageTitle": "Live",
   "more": "Meer",
