implements team feature

--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -41,6 +41,7 @@
   "deleteAccountSuccessMessage": "Your account data will be removed in 30 days.",
   "deleteAccountText": "Confirm your account password and press the delete account button below to delete your account.",
   "deleteAccountTitle": "Delete your account?",
+  "discoverTeamButtonText": "Discover our team",
   "distanceCovered": "Distance covered",
   "email": "Email",
   "emailInvalid": "Email is invalid",
@@ -92,6 +93,8 @@
   "soonAvailableMessage": "This feature will be available soon.",
   "systemMode": "System theme",
   "takePicture": "Take picture",
+  "teamPageTitle": "Meet the team",
+  "teamPhotoSemanticLabel": "Team photo",
   "termsAndConditions": "Terms and conditions",
   "termsAndConditionsText": "This app, created by Baseflow, is provided 'as is' and Solar Team Twente (the Company) disclaims all warranties. By using this app, you agree to these terms and conditions. The app must not be used for illegal purposes. The Company may modify or discontinue the app at any time. Continued use signifies acceptance of changes. Review terms regularly. The Company is not liable for any direct, indirect, incidental, or consequential damages arising from your use of the app.",
   "tryAgainButtonText": "Try again",
