--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -41,6 +41,7 @@
   "deleteAccountSuccessMessage": "Je account data wordt over 30 dagen verwijderd.",
   "deleteAccountText": "Bevestig je account wachtwoord en druk op de account verwijderen knop om je account te verwijderen.",
   "deleteAccountTitle": "Je account verwijderen?",
+  "discoverTeamButtonText": "Ontdek het team",
   "distanceCovered": "Afstand afgelegd",
   "email": "Email",
   "emailInvalid": "Email is ongeldig",
@@ -92,6 +93,8 @@
   "soonAvailableMessage": "Deze pagina is binnenkort beschikbaar.",
   "systemMode": "Systeem thema",
   "takePicture": "Foto nemen",
+  "teamPageTitle": "Ons team",
+  "teamPhotoSemanticLabel": "Teamfoto",
   "termsAndConditions": "Voorwaarden",
   "termsAndConditionsText": "Deze app, ontwikkeld door Baseflow, wordt aangeboden 'as is' en Solar Team Twente (het Bedrijf) wijst alle garanties af. Door deze app te gebruiken, gaat u akkoord met deze algemene voorwaarden. De app mag niet worden gebruikt voor illegale doeleinden. Het Bedrijf kan de app op elk moment wijzigen of stopzetten. Voortgezet gebruik betekent acceptatie van wijzigingen. Bekijk de voorwaarden regelmatig. Het Bedrijf is niet aansprakelijk voor enige directe, indirecte, incidentele of gevolgschade die voortvloeit uit uw gebruik van de app.",
   "tryAgainButtonText": "Probeer opnieuw",
