add about in the more page

--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -5,6 +5,7 @@
   },
   "about": "Over",
   "aboutThisApp": "Over deze app",
+  "aboutThisTeam": "Over het Solar Team Twente",
   "acceptThe": "Ik accepteer de ",
   "accessibility": "Toegankelijkheid",
   "accountSettings": "Account instellingen",
