--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -5,6 +5,7 @@
   },
   "about": "About",
   "aboutThisApp": "About this app",
+  "aboutThisTeam": "About the Solar Team Twente",
   "acceptThe": "I accept the ",
   "accessibility": "Accessibility",
   "accountSettings": "Account settings",
