create states, cubit, to remove statefulWidget

--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -64,6 +64,7 @@
   "leaderboardEmptyMessage": "Er is momenteel geen tussenstand beschikbaar.",
   "leaderboardErrorMessage": "Er is een fout opgetreden bij het ophalen van de tussenstand.",
   "leaderboardTitle": "Tussenstand",
+  "linkedIn": "LinkedIn profiel",
   "lightMode": "Licht thema",
   "livePageTitle": "Live",
   "more": "Meer",
