--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -64,6 +64,7 @@
   "leaderboardEmptyMessage": "Er is momenteel geen tussenstand beschikbaar.",
   "leaderboardErrorMessage": "Er is een fout opgetreden bij het ophalen van de tussenstand.",
   "leaderboardTitle": "Leaderboard",
+  "linkedIn": "LinkedIn profile",
   "lightMode": "Light theme",
   "livePageTitle": "Live",
   "more": "More",
