fixed button style and spacing between the text

--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -30,6 +30,7 @@
   "counterIncrementTooltip": "Increment",
   "counterPageText": "You have pushed the button this many times:",
   "counterPageTitle": "Counter",
+  "completeRanking": "Complete ranking",
   "currentPassword": "Current password",
   "darkMode": "Dark theme",
   "dashboardPageTitle": "Dashboard",
