--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -30,6 +30,7 @@
   "counterIncrementTooltip": "Voeg toe",
   "counterPageText": "Je hebt de knop zo veel keer ingedrukt:",
   "counterPageTitle": "Counter",
+  "completeRanking": "Volledig klassement",
   "currentPassword": "Huidige wachtwoord",
   "darkMode": "Donker thema",
   "dashboardPageTitle": "Dashboard",
