fixed route and ui for admin button

--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -39,6 +39,7 @@
       }
     }
   },
+  "admin": "Admin",
   "about": "About",
   "aboutThisApp": "About this app",
   "aboutThisTeam": "About Solar Team Twente",
