--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -47,6 +47,7 @@
   "accountSettings": "Account instellingen",
   "addAProject": "Voeg een project toe.",
   "address": "Adres",
+  "admin": "Admin",
   "and": "En",
   "appBarTitle": "base_app",
   "appearance_settings": "Weergave-instellingen",
