added url launcher for polarsteps

--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -124,6 +124,7 @@
   "passwordRequired": "Password is required",
   "passwordsNotMatching": "Passwords are not matching.",
   "phoneNumber": "Phone number",
+  "polarstepsCallToAction": "Follow us on Polarsteps",
   "privacyPolicy": "Privacy policy",
   "profileDetails": "Profile details",
   "profileNotFound": "Profile not found",
