--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -124,6 +124,7 @@
   "passwordRequired": "Wachtwoord is verplicht",
   "passwordsNotMatching": "Wachtwoorden komen niet overeen.",
   "phoneNumber": "Telefoonnummer",
+  "polarstepsCallToAction": "Volg ons op Polarsteps",
   "privacyPolicy": "Privacyverklaring",
   "profileDetails": "Profiel details",
   "profileNotFound": "Profiel niet gevonden",
