implemented news feature for admin and fans

--- a/lib/src/ui/localizations/translations/app_en.arb
+++ b/lib/src/ui/localizations/translations/app_en.arb
@@ -39,7 +39,6 @@
       }
     }
   },
-  "admin": "Admin",
   "about": "About",
   "aboutThisApp": "About this app",
   "aboutThisTeam": "About Solar Team Twente",
@@ -48,6 +47,8 @@
   "accountSettings": "Account settings",
   "addAProject": "Add a project.",
   "address": "Address",
+  "admin": "Admin",
+  "adminNewsMessageTitle": "Write your news message here",
   "and": "And",
   "appBarTitle": "base_app",
   "appearance_settings": "Appearance settings",
@@ -108,18 +109,22 @@
   "lightMode": "Light theme",
   "linkedIn": "LinkedIn profile",
   "livePageTitle": "Live",
+  "messageSent": "Message sent",
   "minute": "{count, plural, =0{Minutes} =1{Minute} other{Minutes}}",
+  "missingTitleOrBoddyErrorMessage": "A title or message is missing",
   "more": "More",
   "myAccount": "My account",
   "name": "Name",
   "newPassword": "New password",
   "newPasswordShouldBeDifferent": "New password should be different than the old one.",
+  "newsMessageBodyHintText": "Enter the message body here",
   "newsPageTitle": "News",
   "noAccountYet": "No account yet",
   "notFoundErrorMessage": "The page you are looking for has not been found (yet).",
   "oldPassword": "Old password",
   "ourWebsite": "Visit website",
   "password": "Password",
+  "noNewsMessages": "No news messages have been added yet.",
   "passwordChangeRequestSuccess": "Password reset email was sent.",
   "passwordMinimum8Char": "The password must be at least 8 characters long.",
   "passwordRequired": "Password is required",
@@ -141,9 +146,12 @@
   "resetPassword": "Request password reset",
   "save": "Save",
   "second": "{count, plural, =0{Seconds} =1{Second} other{Seconds}}",
+  "sendMessage": "Send message",
+  "sendingMessageFailedErrorMessage": "Failed to send message",
   "settings": "Settings",
   "signIn": "Sign In",
   "signOut": "Sign Out",
+  "signedInAs": "Signed in as",
   "soonAvailableMessage": "This feature will be available soon.",
   "systemMode": "System theme",
   "takePicture": "Take picture",
@@ -151,6 +159,7 @@
   "teamPhotoSemanticLabel": "Team photo",
   "termsAndConditions": "Terms and conditions",
   "termsAndConditionsText": "This app, created by Baseflow, is provided 'as is' and Solar Team Twente (the Company) disclaims all warranties. By using this app, you agree to these terms and conditions. The app must not be used for illegal purposes. The Company may modify or discontinue the app at any time. Continued use signifies acceptance of changes. Review terms regularly. The Company is not liable for any direct, indirect, incidental, or consequential damages arising from your use of the app.",
+  "title": "Title",
   "tryAgainButtonText": "Try again",
   "unknown": "Unknown",
   "unknownError": "An unknown error occurred. Please try again later."
