--- a/lib/src/ui/localizations/translations/app_nl.arb
+++ b/lib/src/ui/localizations/translations/app_nl.arb
@@ -48,6 +48,7 @@
   "addAProject": "Voeg een project toe.",
   "address": "Adres",
   "admin": "Admin",
+  "adminNewsMessageTitle": "Schrijf hier je nieuwsbericht",
   "and": "En",
   "appBarTitle": "base_app",
   "appearance_settings": "Weergave-instellingen",
@@ -108,14 +109,18 @@
   "lightMode": "Licht thema",
   "linkedIn": "LinkedIn profiel",
   "livePageTitle": "Live",
+  "messageSent": "Bericht verstuurd",
   "minute": "{count, plural, =0{Minuten} =1{Minuut} other{Minuten}}",
+  "missingTitleOrBoddyErrorMessage": "Titel en bericht zijn verplicht",
   "more": "Meer",
   "myAccount": "Mijn account",
   "name": "Naam",
   "newPassword": "Nieuwe wachtwoord",
   "newPasswordShouldBeDifferent": "Het nieuwe wachtwoord moet anders zijn dan het oude.",
+  "newsMessageBodyHintText": "Typ hier de tekst van het nieuwsbericht",
   "newsPageTitle": "Nieuws",
   "noAccountYet": "Nog geen account",
+  "noNewsMessages": "Er zijn momenteel geen nieuwsberichten.",
   "notFoundErrorMessage": "De pagina die je zoekt, is (nog) niet gevonden.",
   "oldPassword": "Oude wachtwoord",
   "ourWebsite": "Bekijk website",
@@ -141,9 +146,12 @@
   "resetPassword": "Vraag wachtwoord reset aan",
   "save": "Opslaan",
   "second": "{count, plural, =0{Seconden} =1{Seconde} other{Seconden}}",
+  "sendMessage": "Verstuur bericht",
+  "sendingMessageFailedErrorMessage": "Het versturen van het bericht is mislukt",
   "settings": "Instellingen",
   "signIn": "Inloggen",
   "signOut": "Uitloggen",
+  "signedInAs": "Ingelogd als",
   "soonAvailableMessage": "Deze pagina is binnenkort beschikbaar.",
   "systemMode": "Systeem thema",
   "takePicture": "Foto nemen",
@@ -151,6 +159,7 @@
   "teamPhotoSemanticLabel": "Teamfoto",
   "termsAndConditions": "Voorwaarden",
   "termsAndConditionsText": "Deze app, ontwikkeld door Baseflow, wordt aangeboden 'as is' en Solar Team Twente (het Bedrijf) wijst alle garanties af. Door deze app te gebruiken, gaat u akkoord met deze algemene voorwaarden. De app mag niet worden gebruikt voor illegale doeleinden. Het Bedrijf kan de app op elk moment wijzigen of stopzetten. Voortgezet gebruik betekent acceptatie van wijzigingen. Bekijk de voorwaarden regelmatig. Het Bedrijf is niet aansprakelijk voor enige directe, indirecte, incidentele of gevolgschade die voortvloeit uit uw gebruik van de app.",
+  "title": "Titel",
   "tryAgainButtonText": "Probeer opnieuw",
   "unknown": "Onbekend",
   "unknownError": "Onbekende fout. Probeer het later opnieuw."
